--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Web site created using create-snowpack-app" />
-    <title>Snowpack App</title>
+    <meta name="description" content="Welcome to myITS Connect X! Feel the next ITS Experience" />
+    <title>myITS Connect X</title>
   </head>
   <body>
     <div id="root"></div>
