--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="author" content="Rizky Andre Wibisono">
+    <meta name="author" content="Rizky Andre Wibisono" />
     <meta
       name="description"
       content="Welcome to myITS Connect X! Feel the next ITS Experience"
@@ -15,5 +15,6 @@
     <div id="root"></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <script type="module" src="/xr/myits-connect-x/dist/index.js"></script>
+    <!-- <script type="module" src="/dist/index.js"></script> -->
   </body>
 </html>
